[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/menu_config2.gd" type="Script" id=1]
[ext_resource path="res://menus/assets/options.png" type="Texture" id=6]
[ext_resource path="res://menus/assets/btn_exit.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/winner_hg.tres" type="DynamicFont" id=8]
[ext_resource path="res://menus/assets/btn_pressed.png" type="Texture" id=9]
[ext_resource path="res://menus/assets/btn_normal.png" type="Texture" id=10]

[node name="MenuMain" type="Control"]
margin_left = 3.0
margin_top = 139.0
margin_right = 43.0
margin_bottom = 179.0
script = ExtResource( 1 )

[node name="Modal_config" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -204.0
margin_right = 136.0
margin_bottom = 104.0
window_title = "Opciones"
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="Modal_config"]
margin_left = -5.0
margin_top = -40.0
margin_right = 281.0
margin_bottom = 312.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Modal_config/TextureRect"]
margin_left = 32.0
margin_top = 63.0
margin_right = 253.0
margin_bottom = 130.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="gral" type="Label" parent="Modal_config/TextureRect/VBoxContainer"]
margin_right = 221.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Volumen general"
align = 1

[node name="vGeneral" type="HSlider" parent="Modal_config/TextureRect/VBoxContainer"]
margin_top = 27.0
margin_right = 221.0
margin_bottom = 43.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Modal_config/TextureRect"]
margin_left = 30.0
margin_top = 133.0
margin_right = 253.0
margin_bottom = 195.0

[node name="efts" type="Label" parent="Modal_config/TextureRect/VBoxContainer2"]
margin_right = 223.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Volumen de efectos"

[node name="vEfectos" type="HSlider" parent="Modal_config/TextureRect/VBoxContainer2"]
margin_top = 27.0
margin_right = 223.0
margin_bottom = 43.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Modal_config/TextureRect"]
margin_left = 32.0
margin_top = 200.0
margin_right = 255.0
margin_bottom = 249.0

[node name="msc2" type="Label" parent="Modal_config/TextureRect/VBoxContainer3"]
margin_right = 223.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
text = "Volumen de música"

[node name="vMusica" type="HSlider" parent="Modal_config/TextureRect/VBoxContainer3"]
margin_top = 27.0
margin_right = 223.0
margin_bottom = 43.0

[node name="Tutorial" type="TextureButton" parent="Modal_config"]
margin_left = 34.0
margin_top = 227.0
margin_right = 242.0
margin_bottom = 281.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="Modal_config/Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -13.0
margin_right = 67.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 8 )
text = "Cómo jugar"

[node name="btn_exit" type="TextureButton" parent="Modal_config"]
margin_left = 236.0
margin_top = -45.0
margin_right = 300.0
margin_bottom = 19.0
texture_normal = ExtResource( 7 )

[connection signal="button_up" from="Modal_config/btn_exit" to="." method="_on_btn_exit_button_up"]
